[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/gloot/ctrl_inventory_stacked.gd" type="Script" id=1]
[ext_resource path="res://addons/gloot/inventory_stacked.gd" type="Script" id=2]
[ext_resource path="res://tests/data/item_definitions_stack.tres" type="Resource" id=3]
[ext_resource path="res://examples/inventory_stacked_transfer.gd" type="Script" id=4]
[ext_resource path="res://images/icon_key.png" type="Texture" id=5]

[node name="InventoryStackedTransfer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 500.0
margin_bottom = 208.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CtrlInventoryStackedLeft" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 248.0
margin_bottom = 208.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
inventory_path = NodePath("../../../InventoryStackedLeft")
default_item_icon = ExtResource( 5 )

[node name="CtrlInventoryStackedRight" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 252.0
margin_right = 500.0
margin_bottom = 208.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
inventory_path = NodePath("../../../InventoryStackedRight")
default_item_icon = ExtResource( 5 )

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 212.0
margin_right = 500.0
margin_bottom = 226.0
text = "Use the buttons below to transfer items from one inventory to the other."

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 230.0
margin_right = 500.0
margin_bottom = 250.0

[node name="BtnRToL" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_right = 248.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "<<<"

[node name="BtnLToR" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 252.0
margin_right = 500.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = ">>>"

[node name="InventoryStackedLeft" type="Node" parent="."]
script = ExtResource( 2 )
item_protoset = ExtResource( 3 )
contents = [ "minimal_item", "big_item", "stackable_item" ]
capacity = 50.0

[node name="InventoryStackedRight" type="Node" parent="."]
script = ExtResource( 2 )
item_protoset = ExtResource( 3 )
contents = [ "minimal_item", "big_item", "stackable_item" ]
capacity = 50.0
